[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/HUD/MarketResource.gd" type="Script" id=1]

[node name="HUDMarketResource" type="HBoxContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 394.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 19.0
text = "Metal"

[node name="SellCount" type="SpinBox" parent="."]
margin_left = 434.0
margin_right = 508.0
margin_bottom = 24.0
rounded = true

[node name="Of" type="Label" parent="."]
margin_left = 512.0
margin_top = 5.0
margin_right = 517.0
margin_bottom = 19.0
text = "/"

[node name="MaxQuantity" type="Label" parent="."]
margin_left = 521.0
margin_top = 5.0
margin_right = 529.0
margin_bottom = 19.0
text = "1"

[node name="PriceBox" type="HBoxContainer" parent="."]
margin_left = 533.0
margin_right = 630.0
margin_bottom = 24.0

[node name="VSeparator2" type="VSeparator" parent="PriceBox"]
margin_right = 4.0
margin_bottom = 24.0

[node name="All" type="Button" parent="PriceBox"]
margin_left = 8.0
margin_right = 37.0
margin_bottom = 24.0
text = "All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="PriceBox"]
margin_left = 41.0
margin_right = 45.0
margin_bottom = 24.0

[node name="PriceLabel" type="Label" parent="PriceBox"]
margin_left = 49.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Price:"

[node name="Price" type="Label" parent="PriceBox"]
margin_left = 89.0
margin_top = 5.0
margin_right = 97.0
margin_bottom = 19.0
text = "2"
[connection signal="pressed" from="PriceBox/All" to="." method="_on_All_pressed"]
